--- a/SolvrSolution/SolvrWebClient/Views/Shared/_Layout.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/Shared/_Layout.cshtml
@@ -17,16 +17,30 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+
+                <!-- Denne div indsætter vores eget logo og når man klikker på det kommer man hen på forsiden (index) -->
+                <div class="float-left">
+                    <a href='@Url.Action("Index", "Home")'>
+                        <img src="~/Content/Images/Logo.png" alt="Smiley face" max-height="auto" width="120">
+                    </a>
+                 </div>
+
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Profile", "NotImplementedYet", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("About", "About", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
+
+            <!-- Her indsættes Create Post knappen -->
+            <div class="button-createPost">
+                <p><a href='@Url.Action("NotImplementedYet", "Home")' class="btn btn-default btn-sm btnCreatePost"> Create Post </a></p>
+            </div>
+
         </div>
     </div>
     <div class="container body-content">
