Lavede en masse og fuckede en masse

--- a/SolvrSolution/SolvrWebClient/Content/Site.css
+++ b/SolvrSolution/SolvrWebClient/Content/Site.css
@@ -22,3 +22,13 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.textarea-notresizeable {
+    resize: none;
+    max-width: inherit;
+    margin-left: 0%;
+}
+
+.reposition-buttonright {
+    margin-left: 632px;
+}
