--- a/SolvrSolution/SolvrWebClient/Views/Shared/_Layout.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p> @DateTime.Now.Year - Solvr</p>
         </footer>
     </div>
 
