Små ændringer. GUI create post i home router til den rigtige side nu. CreatePostController Constructor arbejder med mockDB pt

--- a/SolvrSolution/SolvrWebClient/Views/Shared/_Layout.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 
             <!-- Her indsættes Create Post knappen -->
             <div class="button-createPost">
-                <p><a href='@Url.Action("NotImplementedYet", "Home")' class="btn btn-default btn-sm btnCreatePost"> Create Post </a></p>
+                <p><a onclick="location.href='@Url.Action("Index", "CreatePost")'" class="btn btn-default btn-sm btnCreatePost"> Create Post </a></p>
             </div>
 
         </div>
