tilføjede lidt html og css til posteringsidegui og postcontroller blank

--- a/SolvrSolution/SolvrWebClient/Content/Site.css
+++ b/SolvrSolution/SolvrWebClient/Content/Site.css
@@ -84,4 +84,17 @@ textarea {
     width: 250px;
 }
 
+#post-ReportBtn-Location {
+    position: relative;
+    display: inline-block;
+    min-width: 100px;
+    margin-left: 30%;
+}
+
+#post-CommentBtn-Location {
+    position: absolute;
+    width: 15px;
+    height: 5px;
+}
+
 
