--- a/SolvrSolution/SolvrWebClient/Views/CreatePost/CreatePhysical.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/CreatePost/CreatePhysical.cshtml
@@ -7,7 +7,7 @@
 
 @* TODO: CSS classes for layout *@
 
-<input type="button" name="CreatePhysical" value="Create regular post" onclick="location.href='@Url.Action("Index", "CreatePost")'" />
+<input type="button" class="standard-Btn-Colour btn createPostPage-SwitchBtn-Location"name="CreatePhysical" value="Create regular post" onclick="location.href='@Url.Action("Index", "CreatePost")'" />
 
 @using (Html.BeginForm("CreatePhysical", "CreatePost", FormMethod.Post))
 {
@@ -19,11 +19,11 @@
     </div>
     <div>
         <b>Description:</b> <br />
-        @Html.TextAreaFor(m => m.Description, 10, 100, new { @class = "textarea-notresizeable" })
+        @Html.TextAreaFor(m => m.Description, 10, 100, new { @class = "createPostPage-TextArea-Size" })
     </div>
     <div>
         <b>Secret Description:</b> <br />
-        @Html.TextAreaFor(m => m.AltDescription, 10, 100, new { @class = "textarea-notresizeable" })
+        @Html.TextAreaFor(m => m.AltDescription, 10, 100, new { @class = "createPostPage-TextArea-Size" })
     </div>
     <div>
         <b>Zipcode:</b> <br />
@@ -35,7 +35,8 @@
     </div>
     <div>
         <b>Tags:</b> <br />
-        @Html.TextAreaFor(m => m.TagsString, 1, 100, new { @class = "textarea-notresizeable" })
+        @Html.TextAreaFor(m => m.TagsString, 1, 100, new { @class = "createPostPage-TextArea-Size" })
     </div>
-    <input type="submit" name="Create" value="Create" class="reposition-buttonright" />
+    <br />
+    <input type="submit" name="Create" value="Create" class="createPostPage-CreateBtn-Location standard-Btn-Colour btn" />
 }
