Gui ser bass ud nu.Har lavet comment boxes nu. Mangler bare datecreated

--- a/SolvrSolution/SolvrWebClient/Content/Site.css
+++ b/SolvrSolution/SolvrWebClient/Content/Site.css
@@ -79,8 +79,6 @@
 
 #post-ReportPostBtn-Location {
     position: relative;
-    min-width: 100px;
-    text-align: center;
 }
 
 #post-CommentBtn-Location {
@@ -89,20 +87,29 @@
     text-align: center;
 }
 
-#post-ReportCommentBtn-Location{
-    position: relative;
-    min-width: 100px;
-    text-align: center;
+.post-Btn-Size {
+    padding: 3px;
+}
+
+.post-BtnFloat input {
+    vertical-align: middle;
+    display: table-cell;
+}
+
+.post-BtnFloat {
+    float: right;
+    display: table;
+    padding: 1px;
 }
 
 .post-TextArea-Standard{
     resize: none;
-    width: 80%;
+    width: 100%;
 }
 
 .post-TextArea-PostComment{
     resize: none;
-    width: 60%;
+    width: 100%;
 }
 
 .post-TextArea-View{
@@ -117,7 +124,30 @@
     width: 220%;
 }
 
-.post-CommentBox-Standard{
+/*The box view for making a comment*/
+.post-Box-MakeComment-Standard {
+    float: none;
+    height: auto;
+    width: 60%;
+    margin: 0,3px;
+    padding: 5px;
+    border: double;
+    border-radius: 10px;
+}
+
+/*The box view for viewing a post*/
+.post-Box-ViewPost-Standard {
+    float: none;
+    height: auto;
+    width: 100%;
+    margin: 0,3px;
+    padding: 5px;
+    border: double;
+    border-radius: 10px;
+}
+
+/*The box view for Viewing a comment*/
+.post-Box-ViewComment-Standard {
     float: none;
     height: auto;
     width: 80%;
@@ -127,6 +157,7 @@
     border-radius: 10px;
 }
 
+/*The standard size for the users avatar*/
 img.post-CommentAvatar {
     object-fit: cover;
     height: 64px;
@@ -136,35 +167,26 @@ img.post-CommentAvatar {
     padding: 5px;
 }
 
-/*img.post-Vote-Up{
-    padding: 2px;
-    height: 32px;
-    width: 32px;
-}
-
-img.post-Vote-Down{
-    padding: 2px;
-    height: 32px;
-    width: 32px;
-}*/
-
+/*All vote images have the same size and padding*/
 img.post-Vote {
     padding: 2px;
     height: 32px;
     width: 32px;
 }
 
+/*A container that floats right with a distance of 1% from the top*/
 .post-VoteFloat{
     float: right;
     display: table;
     margin-top: 1%;
 }
 
+/*All images in votefloat will be divided into table cells and aligned in the middle vertically*/
 .post-VoteFloat img {
     vertical-align: middle;
     display: table-cell;
 }
-
+/*Label between vote arrows*/
 .post-VoteLabel{
     padding: 1px;
     margin-left: 30%;
