--- a/SolvrSolution/SolvrWebClient/Views/Post/Index.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/Post/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<link href="~/Content/bootstrap.css" rel="stylesheet" />
+﻿@model SolvrWebClient.Models.CommentViewModel
+
+<link href="~/Content/bootstrap.css" rel="stylesheet" />
 <link href="~/Content/Site.css" rel="stylesheet" />
 <head>
 </head>
@@ -32,44 +34,52 @@
      </div>
 
     @* Make a comment here *@
-    <div class="post-Box-MakeComment-Standard">
-        <div>
+    @using (Html.BeginForm("PostComment", "Post", FormMethod.Post))
+    {
+        <div class="post-Box-MakeComment-Standard">
+            <div>
+                <br />
+                @*@{Model.PostId = ViewBag.id;}*@
+                @Html.HiddenFor(m => m.PostId)
+                @Html.TextAreaFor(m => m.Text, 4, 0, new { @class = "post-TextArea-Standard", placeholder = "Write a comment here..." })
+                @*@Html.TextArea("PostCommentArea", "", 4, 0, new { @class = "post-TextArea-Standard", placeholder = "Write a comment here..." })*@
+            </div>
+            <div class="post-BtnFloat">
+                <input type="submit" name="Post Comment" value="Post Comment" class="post-Btn-Size btn" />
+            </div>
             <br />
-            @Html.TextArea("PostCommentArea", "", 4, 0, new { @class = "post-TextArea-Standard", placeholder = "Write a comment here..." })
-            @*@Html.TextArea(m => m.Text, 4, 0, new { @class = "post-TextArea-PostComment", placeholder = "Write a comment here..." })*@
         </div>
-        <div class="post-BtnFloat">
-            <input type="submit" name="Post Comment" value="Post Comment" class="post-Btn-Size btn" />
-        </div>
-        <br />
-    </div>
+    }
 
     <hr />
     @* View the comments here *@
-    <div class="post-Box-ViewComment-Standard">
-        <div>
-            <img src="~/Content/Images/994192_1.jpg" class="post-CommentAvatar" />
-            @Html.Label("", "User")
-            @*@Html.Label(m => m.Username)*@
+    @foreach (SolvrLibrary.Comment item in ViewBag.CommentList)
+    {
+        <div class="post-Box-ViewComment-Standard">
+            <div>
+                <img src="~/Content/Images/994192_1.jpg" class="post-CommentAvatar" />
+                @Html.Label("", item.User.Username)
+                @*@Html.Label(m => m.Username)*@
+            </div>
+            <div class="post-VoteFloat">
+                <img src="~/Content/Images/upvote-downvote.png" class="post-Vote" />
+                @Html.Label("", "0", new { @class = "post-VoteLabel" })
+                @*@Html.Label(m => m.Votecount, new { @class = "post-VoteLabel" })*@
+                <img src="~/Content/Images/downvote.png" class="post-Vote" />
+            </div>    
+            <div class="post-CommentBox-TextArea">
+                @Html.TextArea("ViewCommentArea", item.Text, 5, 0, new { @readonly = "readonly", @class = "post-TextArea-View" })
+                @*@Html.TextArea(m => m.Text, 5, 0, new { @readonly = "readonly", @class = "post-TextArea-View" })*@
+            </div>
+            <div class="post-BtnFloat">
+                <input type="submit" name="Post Comment" value="Report" class="post-Btn-Size btn" />
+            </div>
+            @Html.Label("", (item.DateCreated.ToShortTimeString() + " " + item.DateCreated.ToShortDateString()), new { @class = "post-DateLabel" })
+            @*@Html.Label(m => m.Datecreated, new { @class = "post-DateLabel" })*@
+            <br />
+            <br />
         </div>
-        <div class="post-VoteFloat">
-            <img src="~/Content/Images/upvote-downvote.png" class="post-Vote" />
-            @Html.Label("", "0", new { @class = "post-VoteLabel" })
-            @*@Html.Label(m => m.Votecount, new { @class = "post-VoteLabel" })*@
-            <img src="~/Content/Images/downvote.png" class="post-Vote" />
-        </div>    
-        <div class="post-CommentBox-TextArea">
-            @Html.TextArea("ViewCommentArea", "User comments inserted here", 5, 0, new { @readonly = "readonly", @class = "post-TextArea-View" })
-            @*@Html.TextArea(m => m.Text, 5, 0, new { @readonly = "readonly", @class = "post-TextArea-View" })*@
-        </div>
-        <div class="post-BtnFloat">
-            <input type="submit" name="Post Comment" value="Report" class="post-Btn-Size btn" />
-        </div>
-        @Html.Label("", "29-11-2017", new { @class = "post-DateLabel" })
-        @*@Html.Label(m => m.Datecreated, new { @class = "post-DateLabel" })*@
-        <br />
-        <br />
-    </div>
+    }
 </body>
 
 
