--- a/SolvrSolution/SolvrWebClient/Views/CreatePost/CreatePhysical.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/CreatePost/CreatePhysical.cshtml
@@ -5,38 +5,39 @@
 }
 <h2>@ViewBag.Title</h2>
 
-@* TODO: CSS classes for layout *@
-
-<input type="button" class="standard-Btn-Colour btn createPostPage-SwitchBtn-Location"name="CreatePhysical" value="Create regular post" onclick="location.href='@Url.Action("Index", "CreatePost")'" />
-
+<div class="createPost-BtnFloat">
+    <input type="button" class="standard-Btn-Colour standard-Btn-border btn" name="CreatePhysical" value="Create regular post" onclick="location.href='@Url.Action("Index", "CreatePost")'" />
+</div>
 @using (Html.BeginForm("CreatePhysical", "CreatePost", FormMethod.Post))
 {
     <div>
-        <b>Titel:</b> <br />
+        <b>Titel:</b><br />
         @Html.TextBoxFor(m => m.Title)<br />
-        <b>Category:</b> <br />
+        <b>Category:</b><br />
         @Html.DropDownListFor(m => m.CategoryId, (IEnumerable<SelectListItem>)ViewBag.DropDownList, "Select Category")
     </div>
     <div>
-        <b>Description:</b> <br />
-        @Html.TextAreaFor(m => m.Description, 10, 100, new { @class = "createPostPage-TextArea-Size" })
+        <b>Description:</b><br />
+        @Html.TextAreaFor(m => m.Description, 10, 0, new { @class = "standard-TextArea-Size" })
     </div>
     <div>
-        <b>Secret Description:</b> <br />
-        @Html.TextAreaFor(m => m.AltDescription, 10, 100, new { @class = "createPostPage-TextArea-Size" })
+        <b>Secret Description:</b><br />
+        @Html.TextAreaFor(m => m.AltDescription, 10, 0, new { @class = "standard-TextArea-Size" })
     </div>
     <div>
-        <b>Zipcode:</b> <br />
+        <b>Zipcode:</b><br />
         @Html.TextBoxFor(m => m.Zipcode)<br />
     </div>
     <div>
-        <b>Address:</b> <br />
+        <b>Address:</b><br />
         @Html.TextBoxFor(m => m.Address)<br />
     </div>
     <div>
-        <b>Tags:</b> <br />
-        @Html.TextAreaFor(m => m.TagsString, 1, 100, new { @class = "createPostPage-TextArea-Size" })
+        <b>Tags:</b><br />
+        @Html.TextAreaFor(m => m.TagsString, 1, 0, new { @class = "standard-TextArea-Size" })
     </div>
     <br />
-    <input type="submit" name="Create" value="Create" class="createPostPage-CreateBtn-Location standard-Btn-Colour btn" />
+    <div class="createPost-BtnFloat">
+        <input type="submit" name="Create" value="Create" class="standard-Btn-Colour standard-Btn-border btn" />
+    </div><br />
 }
